# chat-agent

./: CMakeLists.txt  README.md  config.json.template  generate.ps1  generate.sh  run.ps1  run.sh
src/: about.cpp  about.h  agent_core.cpp  agent_core.h  clipboard_bridge.cpp  clipboard_bridge.h  history.cpp  history.h  llm_backend.cpp  llm_backend.h  main.cpp  mainview.cpp  mainview.h  memory_module.cpp  memory_module.h  messagemodel.cpp  messagemodel.h  resources.qrc  settings.cpp  settings.h  skill_manager.cpp  skill_manager.h  test_history_debug.cpp  tool_registry.cpp  tool_registry.h  web_search_service.cpp  web_search_service.h
src/qml/: About.qml  AgentPanel.qml  ChatMessage.qml  Main.qml  MarkdownMathRender.qml  MarkdownRender.qml  Settings.qml  chat_render.html  md_render.html
src/tools/: base_tool.cpp  base_tool.h  clipboard_tool.cpp  clipboard_tool.h  file_tool.cpp  file_tool.h  image_match_tool.cpp  image_match_tool.h  keyboard_tool.cpp  keyboard_tool.h  ocr_tool.cpp  ocr_tool.h  search_debug_cli.cpp  shell_tool.cpp  shell_tool.h  wait_tool.cpp  wait_tool.h  websearch_tool.cpp  websearch_tool.h  window_tool.cpp  window_tool.h
src/translations/: README.md  en.json  fr.json  ja.json  ru.json  zh.json
